--- a/styles/style.css
+++ b/styles/style.css
@@ -371,13 +371,21 @@ body {
   margin: 0 auto;
 }
 
+body.modalOpen {
+  height: 100vh;
+  overflow-y: hidden;
+  padding-right: 15px; /*Accounting for scrollbar width */
+}
+
 .recipeModal {
   background-color: rgba(10, 10, 10, 0.5294117647);
   width: 100vw;
-  position: absolute;
+  position: fixed;
   z-index: 99;
   top: 0;
   left: 0;
+  overflow-y: scroll;
+  height: 100vh;
 }
 
 .recipeDetailCard {
@@ -423,6 +431,14 @@ body {
 
 .ingredientList li {
   margin: 10px;
+}
+
+.dietList {
+  list-style: none;
+}
+
+.dietList li {
+  background-color: rgba(127, 255, 212, 0.5176470588);
 }
 
 .ingredientList:before, .instructionsList:before {
